# odeity

./: CMakeLists.txt  CashKarpRK45.cpp  CashKarpRK45.h  LICENSE  README.md
cmake/: FindMatheval.cmake  FindNetCDF.cmake
examples/: CMakeLists.txt  allencahn.cpp  allencahn.prm  cahnhilliard.cpp  cahnhilliard.prm  degcahnhilliard.cpp  degcahnhilliard.prm  loretimarch.cpp  loretimarch.prm
src/: CMakeLists.txt
src/functions/: Function.cpp  Function.h  FunctionTime.cpp  FunctionTime.h  GridFunction.h  MathevalFunction.h  MathevalFunction.impl.h  RandomFunction.h  RandomFunction.impl.h  RectangleFunction.h  RectangleFunction.impl.h  SincFunction.h  SincFunction.impl.h  TwoRectanglesFunction.h  TwoRectanglesFunction.impl.h  TwoScaleSineFunction.h  TwoScaleSineFunction.impl.h  WavyCircleFunction.h  WavyCircleFunction.impl.h  ZeroFunction.h  ZeroFunction.impl.h  ZigZagFunction.h  ZigZagFunction.impl.h
src/geometry/: Point.h  RectangularDomain.cpp  RectangularDomain.h  RectangularGrid.h
src/integrators/: CVode.cpp  CVode.h  DormandPrince45.cpp  DormandPrince45.h  ExplicitRungeKuttaBase.cpp  ExplicitRungeKuttaBase.h  IntegratorStats.cpp  IntegratorStats.h  OdeIntegratorBase.cpp  OdeIntegratorBase.h  RungeKutta23.cpp  RungeKutta23.h  RungeKuttaBase.cpp  RungeKuttaBase.h  RungeKuttaChebyshev.cpp  RungeKuttaChebyshev.h  RungeKuttaMerson45.cpp  RungeKuttaMerson45.h
src/io/: DataWriter.cpp  DataWriter.h  NetCDFReader.cpp  NetCDFReader.h  NetCDFWriter.h  NetCDFWriter.impl.h
src/odesystem/: AllenCahnEquation.cpp  AllenCahnEquation.h  CahnHilliardEquation.cpp  CahnHilliardEquation.h  DegenerateCahnHilliardEquation.cpp  DegenerateCahnHilliardEquation.h  ExplicitOde.cpp  ExplicitOde.h  HeatEquation.h  LoretiMarchEquation.cpp  LoretiMarchEquation.h  MolOdeSystem.cpp  MolOdeSystem.h  OdeSystemBase.h  RobertsonEquation.h  TestSystem01.h  TestSystem02.h  TestSystem03.h  TestSystem04.h  TestSystem05.h  TestSystem06.h
src/utils/: ConditionalOStream.cpp  ConditionalOStream.h  Exceptions.cpp  Exceptions.h  Factory.h  JobIdentifier.cpp  JobIdentifier.h  LogStream.cpp  LogStream.h  OdeityApplication.cpp  OdeityApplication.h  ParameterHandler.cpp  ParameterHandler.h  ProgressDisplay.cpp  ProgressDisplay.h  SimpleArray.h  Timer.cpp  Timer.h  Utilities.cpp  Utilities.h  Vector.cpp  Vector.h  Vector.templates.h
